test/1.2/errors/T_EREGISZ.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

bank b {
    /// ERROR EREGISZ
    register r size 10 @ 0;
}
